# kingmaker

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: build.yml
benches/: elections.rs  main.rs  methods.rs  preferences.rs  tactics.rs
src/: lib.rs  main.rs
src/core/: ballot.rs  candidate.rs  election.rs  method.rs  mod.rs  outcome.rs  preference.rs  tactic.rs  voter.rs  voting_bloc.rs  voting_block.rs
src/methods/: approval.rs  borda.rs  instant_runoff.rs  mod.rs  plurality.rs  random_dictator.rs  single_transferable_vote.rs  star.rs
src/preferences/: impartial.rs  mallows.rs  manual.rs  mod.rs  plackett_luce.rs
src/tactics/: burial.rs  compromise.rs  identity.rs  mod.rs  pushover.rs
