[package]
name = "kingmaker"
version = "0.0.0"
edition = "2021"
authors = ["Chance Addis <chance.h.addis@proton.me>"]
description = "A modular, performant, social choice framework for the simulation, computation, and analysis of strategic voting."
keywords = [
    "voting",
    "social choice",
    "strategic voting",
    "computational social choice",
    "game theory",
]
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Approximately-Equal/Kingmaker"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
ordered-float = { version = "5.0.0", features = ["serde"] }
rand = "0.9.0"
rayon = "1.10.0"
thiserror = "2.0.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = true

[lib]
name = "kingmaker"
path = "src/lib.rs"

[[bin]]
name = "kingmaker"
path = "src/main.rs"
